@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2006-2010 by Walter Brisken                             *
+ *   Copyright (C) 2006-2011 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -6986,6 +6986,7 @@ struct mark5_format_generic *new_mark5_format_mark4(int Mbps, int nchan,
 	f->nchan = nchan;
 	f->nbit = nbit;
 	f->formatdata = v;
+	f->formatdatasize = sizeof(struct mark5_format_mark4);
 	f->gettime = mark5_format_mark4_frame_time;
 	f->fixmjd = mark5_format_mark4_fixmjd;
 	f->init_format = mark5_format_mark4_init;
