@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2006-2010 by Walter Brisken                             *
+ *   Copyright (C) 2006-2011 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -9705,6 +9705,7 @@ struct mark5_format_generic *new_mark5_format_vlba(int Mbps, int nchan,
 	else
 	{
 		fprintf(stderr, "nbit must be 1 or 2\n");
+
 		return 0;
 	}
 
@@ -9760,10 +9761,8 @@ struct mark5_format_generic *new_mark5_format_vlba(int Mbps, int nchan,
 		return 0;
 	}
 
-	v = (struct mark5_format_vlba *)calloc(1,
-		sizeof(struct mark5_format_vlba));
-	f = (struct mark5_format_generic *)calloc(1,
-		sizeof(struct mark5_format_generic));
+	v = (struct mark5_format_vlba *)calloc(1, sizeof(struct mark5_format_vlba));
+	f = (struct mark5_format_generic *)calloc(1, sizeof(struct mark5_format_generic));
 
 	v->ntrack = ntrack;
 	v->fanout = fanout;
@@ -9773,6 +9772,7 @@ struct mark5_format_generic *new_mark5_format_vlba(int Mbps, int nchan,
 	f->nchan = nchan;
 	f->nbit = nbit;
 	f->formatdata = v;
+	f->formatdatasize = sizeof(struct mark5_format_vlba);
 	f->gettime = mark5_format_vlba_frame_time;
 	f->fixmjd = mark5_format_vlba_fixmjd;
 	f->init_format = mark5_format_vlba_init;
